# fraudsentinel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
models/: MODEL_CARD.md  torch_feature_schema.json  torch_temperature.json
reports/: audit_01_merged.json  baseline_lr_metrics.json  cleaning_02_cleaned.json  drift_metrics.json  drift_monitoring_report.html  features_03_features.json  labels_04_labeled.json  model_comparison.json  risk_band_summary.json  shap_feature_importance.json  split_v1.json  torch_mlp_metrics.json
scripts/: 01_load_merge.py  02_audit_merged.py  03_clean_merged.py  04_build_features.py  05_label_early_warning.py  06_time_split.py  07_train_baseline.py  08_train_torch_mlp.py  08b_fit_temperature.py  09_evaluate_models.py  10_risk_bands.py  11_infer_batch.py  12_monitor_drift.py
src/: config.py
src/api/: main.py
src/audit/: audit_report.py
src/cleaning/: clean.py
src/data_io/: load.py  save.py
src/evaluation/: metrics.py
src/features/: build_features.py
src/inference/: torch_infer.py
src/labels/: early_warning.py
src/modeling/: baseline_pipeline.py  torch_mlp.py
src/split/: time_split.py
src/utils/: json_utils.py  logging.py
tests/: test_features.py  test_inference.py  test_labels.py  test_metrics.py
