[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-scam-intelligence"
version = "0.1.0"
description = "Early-warning, capacity-based fraud risk scoring for payment transaction streams"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Proactive Scam Intelligence Team" }]
keywords = ["fraud-detection", "machine-learning", "mlops", "risk-scoring"]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3,<2.0",
    "torch>=2.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "mlflow>=2.9",
    "shap>=0.43",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "evidently>=0.4,<0.5",
    "optuna>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.11",
    "ruff>=0.1.6",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "detect-secrets>=1.4",
    "httpx>=0.25",          # for FastAPI test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.venv
  | \.git
  | data
  | models
  | reports
)/
'''

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", "data", "models", "reports", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]   # line-length handled by black

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data/", "models/", "reports/", "\\.venv/"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 15
show_missing = true
